--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Click on the heart to feel my love for you!</p>
             <div class="heart" id="interactiveHeart" onclick="createHearts()"></div>
             <div id="heartMessage" class="message-box">
-                <p>Don't worry brother your little sister always with you even when no one is there for you,<span id="heartName">my love</span></p>
+                <p>Don't worry brother your little sister always with you!,<span id="heartName">my love</span></p>
             </div>
             <button class="btn" onclick="nextStep()">Continue to Your Message</button>
         </div>
@@ -105,6 +105,7 @@
 
 
 </html>
+
 
 
 
