--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <!-- Step 6: Final Wish -->
         <div class="step" id="step6">
-            <h1>🎉 Happy Birthday, <span id="finalName">My comfort person! 💖</span>! 🎂</h1>
+            <h1>🎉 Happy Birthday my comfort person!,<span id="finalName">My comfort person! 💖</span>! 🎂</h1>
         
             <p>✨ May your day be filled with endless joy, sweet laughter, and all the love your heart can hold ✨</p>
             <p>🌟 You light up my world just by being in it — like a million stars in my sky. 🌌</p>
@@ -105,6 +105,7 @@
 
 
 </html>
+
 
 
 
