--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!-- Step 1: Greeting -->
         <div class="step" id="step1">
-            <h1>Happy Birthday,my comfort person!</h1>
+            <h1>Happy Birthday,my sweetest soul!</h1>
             <p>I've created something magical just for you.</p>
             <p>Are you ready to begin this special journey?</p>
             <img src="https://png.pngtree.com/png-vector/20250422/ourmid/pngtree-cute-girl-holding-birthday-cake-smiling-cheerfully-png-image_16067658.png" style="height: 200px;width: 200px;" alt="">
@@ -68,7 +68,7 @@
             <h2>Our Special Moments</h2>
             <p>When will we be together,that's our special moments!!!</p>                                                                                                                                                              
             <p>Some memories I'll cherish forever...</p>
-            <p>Nothing to say about our memories,"One Person,One Million Memories"</p>
+            <p>"One Person,One Million Memories"</p>
             </div>
             <button class="btn" onclick="nextStep()">Your Final Surprise</button>
         </div>
@@ -105,6 +105,7 @@
 
 
 </html>
+
 
 
 
